--- a/playbooks/common/users.yml
+++ b/playbooks/common/users.yml
@@ -1,8 +1,14 @@
-tasks: 
-  - name: create user
-    user:
-      name: "ha"
-      comment: "Home Assistant"
-      createhome: no
-      system: yes
-      shell: "/sbin/nologin"
+- hosts: localhost
+  connection: local 
+  become: yes
+  become_method: sudo
+  any_errors_fatal: true
+  
+  tasks: 
+    - name: create user
+      user:
+        name: "ha"
+        comment: "Home Assistant"
+        createhome: no
+        system: yes
+        shell: "/sbin/nologin"
