--- a/playbooks/common/docker.yml
+++ b/playbooks/common/docker.yml
@@ -1,22 +1,29 @@
-- name: Install packages
-  package:
-    name: ['docker','python3','python3-devel','python3-pip']
-    state: installed
-    update_cache: yes
-    
-  - name: Install docker-compose
-    get_url:
-      url: https://github.com/docker/compose/releases/download/1.28.4/docker-compose-Linux-x86_64
-      dest: /usr/local/bin/docker-compose
-      mode: 0755
+- hosts: localhost
+  connection: local 
+  become: yes
+  become_method: sudo
+  any_errors_fatal: true
 
-  - name: Add user to docker group
-    user:
-      name: ubuntu
-      groups: docker
-      append: yes
+  tasks: 
+    - name: Install packages
+      package:
+        name: ['docker','python3','python3-devel','python3-pip']
+        state: installed
+        update_cache: yes
+        
+    - name: Install docker-compose
+      get_url:
+        url: https://github.com/docker/compose/releases/download/1.28.4/docker-compose-Linux-x86_64
+        dest: /usr/local/bin/docker-compose
+        mode: 0755
 
-  - name: Enable services
-    systemd:
-      name: 'docker.service'
-      enabled: yes
+    - name: Add user to docker group
+      user:
+        name: ubuntu
+        groups: docker
+        append: yes
+
+    - name: Enable services
+      systemd:
+        name: 'docker.service'
+        enabled: yes
