--- a/playbooks/services/wireless_access.yml
+++ b/playbooks/services/wireless_access.yml
@@ -1,30 +1,36 @@
 ## Wireless Network Interface: wlan0
+- hosts: localhost
+  connection: local 
+  become: yes
+  become_method: sudo
+  any_errors_fatal: true
 
-- name: Install packages
-  package:
-    name: ['hostapd']
-    state: installed
-    update_cache: yes
+  tasks: 
+    - name: Install packages
+      package:
+        name: ['hostapd']
+        state: installed
+        update_cache: yes
 
-- name: Disable Service
-  systemd:
-    name: 'hostapd'
-    enabled: false
+    - name: Disable Service
+      systemd:
+        name: 'hostapd'
+        enabled: false
 
-- name: Copy hostapd config file and backup old one
-  ansible.builtin.copy:
-    src: /etc/pilink/configs/hostapd/hostapd.conf
-    dest: /etc/hostapd/hostapd.conf
-    owner: root
-    group: root
-    mode: '0644'
-    backup: yes
+    - name: Copy hostapd config file and backup old one
+      ansible.builtin.copy:
+        src: /etc/pilink/configs/hostapd/hostapd.conf
+        dest: /etc/hostapd/hostapd.conf
+        owner: root
+        group: root
+        mode: '0644'
+        backup: yes
 
-- name: Copy hostapd default file and backup old one
-  ansible.builtin.copy:
-    src: /etc/pilink/configs/hostapd/hostapd
-    dest: /etc/default/hostapd
-    owner: root
-    group: root
-    mode: '0644'
-    backup: yes
+    - name: Copy hostapd default file and backup old one
+      ansible.builtin.copy:
+        src: /etc/pilink/configs/hostapd/hostapd
+        dest: /etc/default/hostapd
+        owner: root
+        group: root
+        mode: '0644'
+        backup: yes
