--- a/playbooks/services/dns_dhcp.yml
+++ b/playbooks/services/dns_dhcp.yml
@@ -18,7 +18,7 @@
 
     - name: Copy dhcpd config file and backup old one
       ansible.builtin.copy:
-        src: /etc/pilink/configs/dhcpcd/dhcpcd.conf
+        src:  ../../configs/dhcpcd/dhcpcd.conf
         dest: /etc/hostapd.conf
         owner: root
         group: root
@@ -27,7 +27,7 @@
 
     - name: Copy dnsmasq config file and backup old one
       ansible.builtin.copy:
-        src: /etc/pilink/configs/dnsmasq/dnsmasq.conf
+        src:  ../../configs/dnsmasq/dnsmasq.conf
         dest: /etc/dnsmasq.conf
         owner: root
         group: root
