--- a/playbooks/services/dns_dhcp.yml
+++ b/playbooks/services/dns_dhcp.yml
@@ -17,7 +17,7 @@
         enabled: false
       with_items:
           - 'dnsmasq'
-          - 'systemd-resolve'
+          #- 'systemd-resolve'
           - 'hostapd'
       
 
