--- a/playbooks/services/firewall.yml
+++ b/playbooks/services/firewall.yml
@@ -35,9 +35,8 @@
         rule: allow
         interface: wlan0
         direction: in
-        # proto: udp
+        proto: udp
         src: 10.1.1.10/24
-        from_port: any
         dest: any
         to_port: '53'
 
