--- a/playbooks/services/enable.yml
+++ b/playbooks/services/enable.yml
@@ -18,3 +18,11 @@
       with_items:
           - 'dnsmasq'
           - 'hostapd'
+
+    - name: Enable dnsmasq and hostapd
+      service:
+        name: "{{ item }}"
+        enabled: true
+      with_items:
+          - 'dnsmasq'
+          - 'hostapd'
