--- a/configs/hostapd/hostapd.conf
+++ b/configs/hostapd/hostapd.conf
@@ -1,17 +1,33 @@
 #
 # /etc/hostapd/hostapd.conf
 #
+
 interface=wlan0
 bridge=br0
+
+# "g" simply means 2.4GHz band
 hw_mode=g
+
+# the channel to use
 channel=7
-wmm_enabled=0
+# the country code
+country_code=EN
+# QoS support, also required for full speed on 802.11n/ac/ax
+wmm_enabled=1
+# 802.11n support   
+ieee80211n=1
+# 802.11ac support
+ieee80211ac=1     
 macaddr_acl=0
+# 1=wpa, 2=wep, 3=both
 auth_algs=1
+# Should SSID be broadcasted
 ignore_broadcast_ssid=0
+# SSID
+ssid=pi_network
+
+# WPA2 Settings
 wpa=2
 wpa_key_mgmt=WPA-PSK
-wpa_pairwise=TKIP
 rsn_pairwise=CCMP
-ssid=pi_network
 wpa_passphrase=ThisIsAPi4!
