--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -19,13 +19,13 @@
   import_playbook: ./common/docker.yml
 
 - name: Setup Wireless Access
-  import_playbook: ./services/wireless_access.yml
+  import_playbook: ./network/wireless_access.yml
 
 - name: Setup DNS and DHCP
-  import_playbook: ./services/dns_dhcp.yml
+  import_playbook: ./network/dns_dhcp.yml
 
 - name: Setup Firewall
-  import_playbook: ./services/firewall.yml
+  import_playbook: ./network/firewall.yml
 
 - name: Enable Services
-  import_playbook: ./services/enable.yml
+  import_playbook: ./network/enable.yml
