fix wireless access

--- a/configs/hostapd/hostapd.conf
+++ b/configs/hostapd/hostapd.conf
@@ -1,14 +1,11 @@
 #
 # /etc/hostapd/hostapd.conf
 #
-
 interface=wlan0
-bridge=br0
-
-# "g" simply means 2.4GHz band
+# Which Wireless band to transmit on 
+# Options: g (2.4GHz 802.11g), b (2.4GHz 802.11b), a (5GHz 802.11a)
 hw_mode=g
-
-# the channel to use
+# Wifi Channel to broadcast on
 channel=7
 # the country code
 country_code=EN
@@ -18,16 +15,19 @@ wmm_enabled=1
 ieee80211n=1
 # 802.11ac support
 ieee80211ac=1     
-macaddr_acl=0
-# 1=wpa, 2=wep, 3=both
-auth_algs=1
+#macaddr_acl=0
+
 # Should SSID be broadcasted
 ignore_broadcast_ssid=0
 # SSID
 ssid=pi_network
 
+# Authentication Algo to use
+# Options: 1=wpa, 2=wep, 3=both
+auth_algs=1
 # WPA2 Settings
 wpa=2
 wpa_key_mgmt=WPA-PSK
 rsn_pairwise=CCMP
+wpa_pairwise=TKIP
 wpa_passphrase=ThisIsAPi4
