--- a/configs/dnsmasq/dnsmasq.conf
+++ b/configs/dnsmasq/dnsmasq.conf
@@ -1,2 +1,5 @@
-interface=wlan0
-  dhcp-range=10.1.1.10,10.1.1.240,255.255.255.0,24h
+interface=wlan0 # Interface to lisen for DHCP Requests
+  dhcp-range=10.1.1.10,10.1.1.240,255.255.255.0,24h # Range of IPs to assign and TTL
+
+domain=pilink # Domain Name for Pi-Link network
+address=/hub.pilink/10.1.1.1  # The aliases for Pi
