--- a/playbooks/network/firewall.yml
+++ b/playbooks/network/firewall.yml
@@ -10,10 +10,10 @@
   any_errors_fatal: true
 
   tasks: 
-    - name: Enable UFW and Deny everything
+    - name: Enable UFW and Allow everything
       community.general.ufw:
         state: enabled
-        policy: deny
+        policy: allow
 
     - name: Set Firewall Logging
       community.general.ufw:
