--- a/configs/dhcpcd/dhcpcd.conf
+++ b/configs/dhcpcd/dhcpcd.conf
@@ -1,6 +1,6 @@
 interface wlan0
-static ip_address=10.1.1.10/24
-
+    static ip_address=10.1.1.10/24
+    nohook wpa_supplicant
 ## Disabling interfaces is necessary for bridging
-denyinterfaces eth0
-denyinterfaces wlan0
+#denyinterfaces eth0
+#denyinterfaces wlan0
