--- a/configs/dhcpcd/dhcpcd.conf
+++ b/configs/dhcpcd/dhcpcd.conf
@@ -1,6 +1,16 @@
 interface wlan0
     static ip_address=10.1.1.10/24
     nohook wpa_supplicant
-## Disabling interfaces is necessary for bridging
-#denyinterfaces eth0
-#denyinterfaces wlan0
+
+# This will be the authoritative DHCP server for the network
+authoritative;
+
+subnet 10.1.1.10 netmask 255.255.255.0 {
+ range 10.1.1.10 10.1.1.100;
+ option broadcast-address 10.1.1.255;
+ option routers 10.1.1.1;
+ default-lease-time 600;
+ max-lease-time 7200;
+ option domain-name "pilink";
+ option domain-name-servers 1.1.1.1, 1.0.0.1;
+}
