fix more of the things

--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -27,5 +27,5 @@
 - name: Setup Firewall
   import_playbook: ./network/firewall.yml
 
-- name: Enable Services
-  import_playbook: ./network/enable.yml
+# - name: Enable Services
+#   import_playbook: ./network/enable.yml
