--- a/playbooks/network/firewall.yml
+++ b/playbooks/network/firewall.yml
@@ -57,3 +57,7 @@
         group: root
         mode: '0644'
         backup: yes
+
+    - name: Reload UFW
+      community.general.ufw:
+        state: reloaded
