--- a/configs/dhcp/dhcpd.conf
+++ b/configs/dhcp/dhcpd.conf
@@ -5,12 +5,24 @@ interface wlan0
 # This will be the authoritative DHCP server for the network
 authoritative;
 
+# Allow each client to have exactly one lease, and expire
+# old leases if a new DHCPDISCOVER occurs
+one-lease-per-client true;
+
+# Log to the dhcp0 facility by default
+log-facility dhcp0;
+
+# DHCP Lease minimums and maximums 
+default-lease-time 600;
+max-lease-time 7200;
+
+# DHCP Domain Settings
+option domain-name "pilink";
+option domain-name-servers 1.1.1.1, 1.0.0.1;
+
+# Define subnet for IoT Devices
 subnet 10.1.1.10 netmask 255.255.255.0 {
  range 10.1.1.10 10.1.1.100;
  option broadcast-address 10.1.1.255;
  option routers 10.1.1.1;
- default-lease-time 600;
- max-lease-time 7200;
- option domain-name "pilink";
- option domain-name-servers 1.1.1.1, 1.0.0.1;
 }
