--- a/configs/dhcp/dhcpd.conf
+++ b/configs/dhcp/dhcpd.conf
@@ -9,8 +9,8 @@ authoritative;
 # old leases if a new DHCPDISCOVER occurs
 one-lease-per-client true;
 
-# Log to the dhcp0 facility by default
-log-facility dhcp0;
+# Log to the local0 facility by default
+log-facility local0;
 
 # DHCP Lease minimums and maximums 
 default-lease-time 600;
