--- a/configs/dhcp/dhcpd.conf
+++ b/configs/dhcp/dhcpd.conf
@@ -1,6 +1,6 @@
-interface wlan0
-    static ip_address=10.1.1.1/24
-    nohook wpa_supplicant
+# interface wlan0
+#     static ip_address=10.1.1.1/24
+#     nohook wpa_supplicant
 
 # This will be the authoritative DHCP server for the network
 authoritative;
