--- a/playbooks/network/enable.yml
+++ b/playbooks/network/enable.yml
@@ -19,6 +19,11 @@
           - 'dnsmasq'
           - 'hostapd'
 
+    - name: Unmask hostapd
+      become: true
+      become_user: root
+      shell : systemctl unmask hostapd 
+      
     - name: Force reenable hostapd
       become: true
       become_user: root
