--- a/playbooks/network/firewall.yml
+++ b/playbooks/network/firewall.yml
@@ -44,14 +44,17 @@
         mode: '0644'
         backup: yes
 
-    - name: Copy ufw before rules and backup old one
+    - name: Copy ufw rules and backup old one
       ansible.builtin.copy:
-        src:  ../../configs/ufw/before.rules
-        dest: /etc/ufw/before.rules
+        src:  ../../configs/ufw/{{item}}.rules
+        dest: /etc/ufw/{{item}}.rules
         owner: root
         group: root
         mode: '0644'
         backup: yes
+      with_items:
+          - 'before'
+          - 'after'
 
     - name: Reload UFW and Allow everything
       community.general.ufw:
