Fix System Networking Services (#6)

--- a/configs/sysctl/sysctl.conf
+++ b/configs/sysctl/sysctl.conf
@@ -65,3 +65,6 @@ net.ipv4.ip_forward=1
 # See https://www.kernel.org/doc/html/latest/admin-guide/sysrq.html
 # for what other values do
 #kernel.sysrq=438
+
+# Log Facilities
+local0.debug       /var/log/dhcpd
