--- a/playbooks/network/dns_dhcp.yml
+++ b/playbooks/network/dns_dhcp.yml
@@ -5,9 +5,9 @@
   any_errors_fatal: true
 
   tasks: 
-    - name: Install dnsmasq packages
+    - name: Install DNS and DHCP packages
       package:
-        name: ['dnsmasq']
+        name: ['dnsmasq', 'isc-dhcp-server']
         state: present
         update_cache: yes
 
@@ -18,15 +18,14 @@
       with_items:
           - 'dnsmasq'
           #- 'systemd-resolve'
-          - 'hostapd'
       
 
     - name: Copy dhcpd config file and backup old one
       copy:
-        src:  ../../configs/dhcpcd/dhcpcd.conf
-        dest: /etc/hostapd.conf
+        src:  ../../configs/dhcp/dhcpd.conf
+        dest: /etc/dhcp/dhcpd.conf
         owner: root
-        group: root
+        group: sys
         mode: '0644'
         backup: yes
 
@@ -35,12 +34,52 @@
         src:  ../../configs/dnsmasq/dnsmasq.conf
         dest: /etc/dnsmasq.conf
         owner: root
-        group: root
+        group: sys
         mode: '0644'
         backup: yes
 
+    - name: Copy isc-dhcp config file and backup old one
+      copy:
+        src:  ../../configs/dhcp/isc-dhcp-server
+        dest: /etc/default/isc-dhcp-server
+        owner: root
+        group: sys
+        mode: '0644'
+        backup: yes
+    
+    - name: Make sure /var/db folder exists
+      file: 
+          path: /var/db
+          owner: root 
+          group: root 
+          mode: 0755 
+          state: directory
+
+    - name: Make sure DHCP Lease file exists
+      copy:
+          content: ""
+          dest: /var/db/dhcp.leases
+          owner: root
+          group: root
+          mode: '0644'
+          force: no  
+        
     - name: Remove old DNS package
       package:
         name: ['systemd-resolve']
         state: absent
         update_cache: yes
+
+    - name: Enable dnsmasq and hostapd
+      systemd:
+        name: "{{ item }}"
+        enabled: true
+        masked: no
+      with_items:
+          - 'dnsmasq'
+          - 'isc-dhcp-server'
+
+    - name: Enable dhcp on boot
+      command: update-rc.d {{item}} enable
+      with_items:
+          - isc-dhcp-server
