--- a/playbooks/network/firewall.yml
+++ b/playbooks/network/firewall.yml
@@ -10,11 +10,6 @@
   any_errors_fatal: true
 
   tasks: 
-    - name: Enable UFW and Deny everything
-      community.general.ufw:
-        state: enabled
-        policy: deny
-
     - name: Set Firewall Logging
       community.general.ufw:
         logging: 'on'
@@ -48,3 +43,20 @@
         group: root
         mode: '0644'
         backup: yes
+
+    - name: Copy ufw rules and backup old one
+      ansible.builtin.copy:
+        src:  ../../configs/ufw/{{item}}.rules
+        dest: /etc/ufw/{{item}}.rules
+        owner: root
+        group: root
+        mode: '0644'
+        backup: yes
+      with_items:
+          - 'before'
+          - 'after'
+
+    - name: Reload UFW and Allow everything
+      community.general.ufw:
+        state: reloaded
+        policy: allow
