--- a/playbooks/network/wireless_access.yml
+++ b/playbooks/network/wireless_access.yml
@@ -62,6 +62,11 @@
     - name: Configure wlan0 ip
       command:  ifconfig wlan0 10.1.1.1
    
+    - name: Unmask hostapd
+      become: true
+      become_user: root
+      shell : systemctl unmask hostapd
+
     - name: Force reenable hostapd
       become: true
       become_user: root
