Disable isc-dhcp-server before updating

--- a/playbooks/network/dns_dhcp.yml
+++ b/playbooks/network/dns_dhcp.yml
@@ -17,8 +17,7 @@
         enabled: false
       with_items:
           - 'dnsmasq'
-          #- 'systemd-resolve'
-      
+          - 'isc-dhcp-server'
 
     - name: Copy dhcpd config file and backup old one
       copy:
