--- a/playbooks/network/dns_dhcp.yml
+++ b/playbooks/network/dns_dhcp.yml
@@ -21,7 +21,7 @@
 
     - name: Copy dhcpd config file and backup old one
       copy:
-        src:  ../../configs/dhcp/dhcpd.conf
+        src:  ../../configs/system/dhcpd.conf
         dest: /etc/dhcp/dhcpd.conf
         owner: root
         group: sys
@@ -30,7 +30,7 @@
 
     - name: Copy dnsmasq config file and backup old one
       copy:
-        src:  ../../configs/dnsmasq/dnsmasq.conf
+        src:  ../../configs/system/dnsmasq.conf
         dest: /etc/dnsmasq.conf
         owner: root
         group: sys
@@ -39,7 +39,7 @@
 
     - name: Copy isc-dhcp config file and backup old one
       copy:
-        src:  ../../configs/dhcp/isc-dhcp-server
+        src:  ../../configs/system/isc-dhcp-server
         dest: /etc/default/isc-dhcp-server
         owner: root
         group: sys
