--- a/playbooks/network/firewall.yml
+++ b/playbooks/network/firewall.yml
@@ -42,7 +42,7 @@
 
     - name: Copy ufw config file and backup old one
       ansible.builtin.copy:
-        src:  ../../configs/ufw/ufw
+        src:  ../../configs/system/ufw
         dest: /etc/ufw
         owner: root
         group: root
@@ -51,7 +51,7 @@
 
     - name: Copy ufw rules and backup old one
       ansible.builtin.copy:
-        src:  ../../configs/ufw/{{item}}.rules
+        src:  ../../configs/system/{{item}}.rules
         dest: /etc/ufw/{{item}}.rules
         owner: root
         group: root
