--- a/playbooks/common/docker.yml
+++ b/playbooks/common/docker.yml
@@ -5,10 +5,26 @@
   any_errors_fatal: true
 
   tasks: 
-    - name: Install Docker-CE packages
+    - name: Install Prerequisite Docker packages
       package:
-        name: ['apt-transport-https', 'ca-certificates', 'curl', 'gnupg-agent', 'software-properties-common']
+        name: ['{{ item }}']
         state: present
+        update_cache: yes
+      with_items:
+          - 'apt-transport-https'
+          - 'ca-certificates'
+          - 'curl'
+          - 'gnupg-agent'
+          - 'software-properties-common'
+          - 'libffi-dev'
+          - 'libssl-dev'
+          - 'python3'
+          - 'python3-pip'
+    
+    - name: Make sure python-configparser is removed
+      package:
+        name: ['python-configparser']
+        state: absent
         update_cache: yes
     
     - name: Add Docker-CE GPG Key
@@ -28,10 +44,7 @@
         update_cache: yes
 
     - name: Install docker-compose
-      get_url:
-        url: https://github.com/docker/compose/releases/download/1.28.4/docker-compose-Linux-x86_64
-        dest: /usr/local/bin/docker-compose
-        mode: 0755
+      shell: pip3 -v install docker-compose
 
     - name: Add user to docker group
       user:
