tweaking TuyaGateway directories

--- a/services/tuya_gateway/docker-compose.yml
+++ b/services/tuya_gateway/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: "tuyagateway:latest"
     hostname: tuyagateway 
     container_name: tuyagateway   
-    working_dir: /usr/src/app    
+    working_dir: /usr/src/app
     volumes:
-      - ./tuyamqtt/config:/usr/src/app/etc    
+      - /etc/pilink/services/tuya_gateway/config:/usr/src/app/etc    
     command: "tuyagateway"
     restart: always
     network_mode: host
@@ -18,8 +18,8 @@ services:
     container_name: gismocaster
     working_dir: /usr/src/app
     volumes:
-      - ./gismocaster/etc:/usr/src/app/etc
-      - ./gismocaster/var:/usr/src/app/var
+      - /etc/pilink/services/tuya_gateway/etc:/usr/src/app/etc
+      - /etc/pilink/services/tuya_gatway/var:/usr/src/app/var
     command: "python3 web/manage.py runserver 0.0.0.0:8000 --noreload"
     restart: always
     network_mode: host
