--- a/playbooks/common/users.yml
+++ b/playbooks/common/users.yml
@@ -11,4 +11,5 @@
         comment: "Home Assistant"
         createhome: no
         system: yes
-        shell: "/sbin/nologin"
+        shell: /bin/bash
+        # shell: "/sbin/nologin" TODO: Change it back once perms get nicer
