--- a/playbooks/common/users.yml
+++ b/playbooks/common/users.yml
@@ -9,7 +9,7 @@
       user:
         name: "ha"
         comment: "Home Assistant"
-        createhome: no
+        createhome: yes # TODO: make no once dev is done
         system: yes
         shell: /bin/bash
         # shell: "/sbin/nologin" TODO: Change it back once perms get nicer
