--- a/services/tuya_gateway/docker-compose.yml
+++ b/services/tuya_gateway/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - /etc/pilink/services/tuya_gateway/config:/usr/src/app/etc    
     command: "tuyagateway"
     restart: always
+    network_mode: host
   gismocaster:
     ports:
       - "8000:8000"
@@ -18,6 +19,6 @@ services:
     working_dir: /usr/src/app
     volumes:
       - /etc/pilink/services/tuya_gateway/etc:/usr/src/app/etc
-      - /etc/pilink/services/tuya_gatway/var:/usr/src/app/var
+      - /etc/pilink/services/tuya_gateway/var:/usr/src/app/var
     command: "python3 web/manage.py runserver 0.0.0.0:8000 --noreload"
     restart: always
