--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,6 @@ dmypy.json
 
 # Our Configs
 configs/*/.*
+configs/homeassistant/blueprints/
+configs/homeassistant/home-assistant_v2.db
+configs/homeassistant/custom_components/
