--- a/services/prometheus/prometheus.yml
+++ b/services/prometheus/prometheus.yml
@@ -9,11 +9,11 @@ rule_files:
 scrape_configs:
   - job_name: prometheus
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
   
   - job_name: "ha"
     scrape_interval: 60s
     metrics_path: /api/prometheus
     scheme: https
     static_configs:
-      - targets: ['localhost:8123']
+      - targets: ['homeassistant:8123']
