--- a/services/prometheus/prometheus.yml
+++ b/services/prometheus/prometheus.yml
@@ -14,6 +14,6 @@ scrape_configs:
   - job_name: "ha"
     scrape_interval: 60s
     metrics_path: /api/prometheus
-    scheme: https
+    scheme: http
     static_configs:
       - targets: ['homeassistant:8123']
