--- a/configs/homeassistant/configuration.yaml
+++ b/configs/homeassistant/configuration.yaml
@@ -14,3 +14,9 @@ prometheus:
   namespace: ha
 
 localtuya:
+
+auth_providers:
+  - type: trusted_networks
+    trusted_networks:
+      - 192.168.0.0/16
+      - 10.0.0.0/8
