--- a/configs/homeassistant/configuration.yaml
+++ b/configs/homeassistant/configuration.yaml
@@ -9,3 +9,14 @@ group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
+
+prometheus:
+  namespace: ha
+
+localtuya:
+
+auth_providers:
+  - type: trusted_networks
+    trusted_networks:
+      - 192.168.0.0/16
+      - 10.0.0.0/8
