--- a/services/prometheus/prometheus.yml
+++ b/services/prometheus/prometheus.yml
@@ -9,4 +9,16 @@ rule_files:
 scrape_configs:
   - job_name: prometheus
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
+  
+  - job_name: "ha"
+    scrape_interval: 60s
+    metrics_path: /api/prometheus
+    scheme: http
+    bearer_token: 'ADD_TOKEN_HERE'
+    static_configs:
+      - targets: ['ADD_PI_IP_HERE:8123']
+      
+  # - job_name: dnsmasq
+  #   static_configs:
+  #     - targets: ['localhost:9153']
