--- a/services/prometheus/prometheus.yml
+++ b/services/prometheus/prometheus.yml
@@ -18,7 +18,7 @@ scrape_configs:
     bearer_token: 'ADD_TOKEN_HERE'
     static_configs:
       - targets: ['ADD_PI_IP_HERE:8123']
-      
-  # - job_name: dnsmasq
-  #   static_configs:
-  #     - targets: ['localhost:9153']
+  
+  - job_name: "dnsmasq"
+    static_configs:
+      - targets: ['localhost:9153']   
