update address name

--- a/configs/system/dnsmasq.conf
+++ b/configs/system/dnsmasq.conf
@@ -4,7 +4,7 @@ interface=wlan0 # Interface to lisen for DHCP Requests
   dhcp-range=10.1.1.10,10.1.1.240,255.255.255.0,24h # Range of IPs to assign and TTL
 
 domain=pilink # Domain Name for Pi-Link network
-address=/hub.pilink/10.1.1.1  # The aliases for Pi
+address=/ubuntu/10.1.1.1  # The aliases for Pi
 
 # Cloudflares's nameservers
 server=1.1.1.1
