fleshing out watchdog

--- a/playbooks/network/dns_dhcp.yml
+++ b/playbooks/network/dns_dhcp.yml
@@ -73,7 +73,7 @@
       systemd:
         name: "{{ item }}"
         enabled: true
-        masked: no
+        masked: 
       with_items:
           - 'dnsmasq'
           - 'isc-dhcp-server'
