--- a/services/mqtt2prometheus/config.yaml
+++ b/services/mqtt2prometheus/config.yaml
@@ -1,7 +1,7 @@
 # Settings for the MQTT Client. Currently only these three are supported
 mqtt:
   # The MQTT broker to connect to
-  server: tcp://192.168.1.152:1883
+  server: tcp://ADD_PI_IP_HERE:1883
   # Optional: Username and Password for authenticating with the MQTT Server
   # user: bob
   # password: happylittleclouds
