--- a/services/mqtt2prometheus/config.yaml
+++ b/services/mqtt2prometheus/config.yaml
@@ -1,7 +1,7 @@
 # Settings for the MQTT Client. Currently only these three are supported
 mqtt:
   # The MQTT broker to connect to
-  server: tcp://10.0.0.67:1883
+  server: tcp://ADD_PI_IP_HERE:1883
   # Optional: Username and Password for authenticating with the MQTT Server
   # user: bob
   # password: happylittleclouds
@@ -12,7 +12,7 @@ mqtt:
   # Optional: Used to specify ClientID. The default is <hostname>-<pid>
   # client_id: somedevice
   # The Topic path to subscribe to. Be aware that you have to specify the wildcard.
-  topic_path: iot/
+  topic_path: iot/+/+
   # Optional: Regular expression to extract the device ID from the topic path. The default regular expression, assumes
   # that the last "element" of the topic_path is the device id.
   # The regular expression must contain a named capture group with the name deviceid
