--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,7 @@ configs/*/.*
 configs/homeassistant/blueprints/
 configs/homeassistant/home-assistant_v2.db
 configs/homeassistant/custom_components/
+*/prometheus/data/
+mosquitto.db
+prometheus.yml
+services/mqtt2prometheus/config.yaml
