--- a/services/prometheus/example-prometheus.yml
+++ b/services/prometheus/example-prometheus.yml
@@ -35,4 +35,4 @@ scrape_configs:
     metrics_path: /metrics
     scheme: http
     static_configs:
-      - targets: ['10.0.0.67:5432'] 
+      - targets: ['ADD_PI_IP_HERE:5432']
