--- a/configs/system/dnsmasq.conf
+++ b/configs/system/dnsmasq.conf
@@ -1,5 +1,15 @@
 interface=wlan0 # Interface to lisen for DHCP Requests
   dhcp-range=10.1.1.10,10.1.1.240,255.255.255.0,24h # Range of IPs to assign and TTL
+  dhcp-option=option:router,10.1.1.1
+  dhcp-option=option:dns-server,10.1.1.1
+  dhcp-option=option:netmask,255.255.255.0
 
+# DNS configuration
+port=53
 domain=pilink # Domain Name for Pi-Link network
 address=/hub.pilink/10.1.1.1  # The aliases for Pi
+
+#Prevents packets with malformed domain names and packets with Private IP Range leaving network
+domain-needed
+bogus-priv
+strict-order
