initial explorer page with temp data

--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,11 +1,12 @@
 asgiref
 autopep8
 django==2.2.10
+dj-database-url
+gunicorn
 pycodestyle
+python-decouple
 pytz
+requests          
 sqlparse
 Unipath
-dj-database-url
-python-decouple
-gunicorn
 whitenoise
