Implement Automated Network Hardening (#26)

--- a/playbooks/network/dns_dhcp.yml
+++ b/playbooks/network/dns_dhcp.yml
@@ -82,7 +82,7 @@
       systemd:
         name: "{{ item }}"
         enabled: true
-        masked: no
+        masked: 
       with_items:
           - 'dnsmasq'
 
