--- a/services/prometheus/example-prometheus.yml
+++ b/services/prometheus/example-prometheus.yml
@@ -28,7 +28,7 @@ scrape_configs:
     metrics_path: /metrics
     scheme: http
     static_configs:
-      - targets: ['10.0.0.67:9641']
+      - targets: ['ADD_PI_IP_HERE:9641']
 
   - job_name: "iptables"
     metrics_path: /metrics
