--- a/services/prometheus/docker-compose.yml
+++ b/services/prometheus/docker-compose.yml
@@ -3,16 +3,13 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
+    user: root
     ports:
-    - 9090:9090
+      - 9090:9090
     command:
-    - --config.file=/etc/prometheus/prometheus.yml
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/data'
+      - '--storage.tsdb.retention.time=30d'
     volumes:
     - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
-
-  # dnsmasq_exporter:
-  #   image: ricardbejarano/dnsmasq_exporter
-  #   container_name: dnsmasq_exporter
-  #   ports:
-  #     - 9153:9153
-    
+    - ./data/:/data
