--- a/configs/system/dnsmasq.conf
+++ b/configs/system/dnsmasq.conf
@@ -1,8 +1,11 @@
+# DHCP Setup
 interface=wlan0 # Interface to lisen for DHCP Requests
   dhcp-range=10.1.1.10,10.1.1.240,255.255.255.0,24h # Range of IPs to assign and TTL
   dhcp-option=option:router,10.1.1.1
   dhcp-option=option:dns-server,10.1.1.1
   dhcp-option=option:netmask,255.255.255.0
+listen-address=::1,127.0.0.1,10.1.1.1
+dhcp-authoritative
 
 # DNS configuration
 port=53
@@ -13,3 +16,9 @@ address=/hub.pilink/10.1.1.1  # The aliases for Pi
 domain-needed
 bogus-priv
 strict-order
+bind-interfaces
+
+# Disable reading other files for name servers
+no-resolv
+server=1.1.1.1
+server=1.0.0.1
